test/invalid-semantic/56307_usedUndeclaredVariable/usedUndeclaredVariable.agu
-- Author: 56307, Denis Ungureanu, Semantic Test 1
let useUndeclared : Int = x + 5